# Pseudo-Parallel

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  tsconfig.json
backend-ts/src/: index.ts
docs/: DESIGN.md
engine-rust/logs/: engine.log.2026-05-18
engine-rust/src/: log.rs  main.rs  startup.rs  ws_recv.rs  ws_send.rs
engine-rust/src/market_data/: candle.rs  config.rs  constans.rs  engine.rs  event.rs  mod.rs  startup.rs
engine-rust/src/market_data/coordinator/: candle.rs  mod.rs
engine-rust/src/market_data/engine/: core.rs  mod.rs  seed.rs  tests.rs  view.rs
engine-rust/src/market_data/hyperliquid/: Hyperliquid.md  client.rs  hl_client.rs  hl_rest_client.rs  mod.rs
engine-rust/src/market_data/hyperliquid/protocols/: PROTOCOL.md  candle.rs  inbound.rs  message.rs  mod.rs  rest.rs  subscribe.rs
engine-rust/src/market_data/indicators/: atr.rs  mod.rs  sma.rs
engine-rust/src/market_data/signal/: event.rs  mod.rs  price_alert.rs
engine-rust/src/market_data/signal/evaluate/: evaluate_atr.rs  evaluate_indicators.rs  event_evaluator.rs  mod.rs
engine-rust/src/market_data/signal/indicators/: atr.rs  evaluate_indicators.rs  mod.rs  (+1 more)
engine-rust/src/market_data/types/: candle.rs  candle_key.rs  coin.rs  interval.rs  mod.rs
engine-rust/src/ws/: mod.rs  ws_recv.rs  ws_send.rs
fundamentals/: README.md
fundamentals/http/: header.h  http_server  main.c  server.c  server.h
rust-http-fundamentals/: Cargo.toml
rust-http-fundamentals/src/: http_server.rs  main.rs  request.rs  response.rs
src/: main.rs
src/ohlcv_cndl/: mod.rs  wbs.rs
(+15 files in other folders)
