[package]
name = "pseudo-parallel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pseudo-parallel-engine"
path = "engine-rust/src/main.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0.149"
